Fixed bug text cutoff

--- a/src/components/TextDisplay/Category.css
+++ b/src/components/TextDisplay/Category.css
@@ -5,6 +5,7 @@
     flex-wrap: wrap;
     align-items: flex-start;
     padding-left: 20px;
+    width: 100%;
 }
 
 .category-title{
@@ -29,5 +30,6 @@
 
 .category-content{
     margin-left:5px;
+    width: 100%;
 }
 
